[package]
name = "ddddocr"
version = "1.0.0"
edition = "2021"

[features]
default = ["inline-model"]

# 编译 main 的时候，是否内联模型
inline-model = []

# 保留旧 feature 名称用于兼容，tract 后端不再支持 CUDA/动态 ONNX Runtime。
cuda = []

# 保留旧 feature 名称用于兼容，tract 后端不再需要动态运行库。
load-dynamic = []

# 保留旧 feature 名称用于兼容，tract 后端不再下载 ONNX Runtime。
download-binaries = []

[dependencies]
# 推理与数值计算，使用纯 Rust ONNX 后端，避免 onnxruntime/onnx-sys。
tract-onnx = "0.21.15"
ndarray = "0.16"

# 静态变量
lazy_static = "1.5.0"

# 序列化 / 反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
anyhow = "1.0"

# 图像处理
image = "0.25"
imageproc = "0.25.0"

# 加密 / 哈希
sha256 = "1.6"
base64 = "0.22"

# web 框架
salvo = { version = "0.85", features = [
  "oapi",
  "anyhow",
  "rustls",
  "acme",
  "logging",
] }
salvo_extra = { version = "0.85.0", default-features = false, features = [
  "logging",
] }

# 日志
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = "0.1.41"

# 命令行参数
clap = { version = "4.5", features = ["derive"] }

# 异步运行时
tokio = { version = "1.48", features = ["full"] }

# 缓存
lru = "0.16"
bytes = "1.11"
async-trait = "0.1"

# ansi
enable-ansi-support = "0.3"

# mcp
rmcp = { version = "0.12.0", features = ["server"] }
